.provarCaches/00Df2000001KKNJEA4/objects/LiveText__LiveText_Number__c.object
<CustomObject>
    <description>LiveMessage Number</description>
    <fields>
        <fullName>LiveText__Auto_Response_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This form is sent automatically when a LiveMessage session is received during business hours.</description>
        <inlineHelpText>This form is sent automatically when a LiveMessage session is received during business hours.</inlineHelpText>
        <label>Auto-Response Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LiveText__Structured_Form__c.LiveText__Is_Static__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>LiveText__Structured_Form__c.LiveText__Channel__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LiveText__Structured_Form__c</referenceTo>
        <relationshipLabel>LiveText Numbers</relationshipLabel>
        <relationshipName>LiveText_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Auto_Response_Message__c</fullName>
        <description>This message is sent automatically when a LiveMessage session is received during business hours.</description>
        <inlineHelpText>This message is sent automatically when a LiveMessage session is received during business hours.</inlineHelpText>
        <label>Auto-Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Business support hours for this phone number. Business Hours can be managed via Setup.</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>LiveMessage Numbers</relationshipLabel>
        <relationshipName>LiveText_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Channel_Type__c</fullName>
        <defaultValue>&quot;Text&quot;</defaultValue>
        <description>LiveMessage Channel Type</description>
        <label>Channel Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Chat_End_Message__c</fullName>
        <description>This message is sent automatically to a customer when a text session is ended by an agent.</description>
        <inlineHelpText>This message is sent automatically when a LiveMessage session is ended by an agent.</inlineHelpText>
        <label>Chat End Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__CreateEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__CreateTask__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CreateTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Critical_Alert_Time__c</fullName>
        <description>Seconds after conversation tab with no response from LiveMessage Agent turn red.</description>
        <inlineHelpText>The number of seconds before the LiveMessage session tab alerts the agent to respond.</inlineHelpText>
        <label>Critical Alert Time (seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__End_Message_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This form is sent automatically when a LiveMessage session is ended by an agent.</description>
        <inlineHelpText>This form is sent automatically when a LiveMessage session is ended by an agent.</inlineHelpText>
        <label>End Message Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LiveText__Structured_Form__c.LiveText__Is_Static__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>LiveText__Structured_Form__c.LiveText__Channel__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LiveText__Structured_Form__c</referenceTo>
        <relationshipLabel>LiveText Numbers (End Message Form)</relationshipLabel>
        <relationshipName>LiveText_Numbers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Support_Number__c</fullName>
        <description>Sanitized Support Number</description>
        <formula>LiveText__International_Live_Text_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Support Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__ISOCountryCode__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <description>ISO 3166-1 alpha-2 country code</description>
        <label>ISO Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__ITR_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not ITR, and it&apos;s associated workflows, is enabled for this number.</description>
        <inlineHelpText>ITR automates opt-out tracking, routing to agent queues(via Omni-Channel),case creation,off-hour handling and other interactions.Please review the Admin Guide for more information: https://sfdc.co/bw5vlo</inlineHelpText>
        <label>ITR Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Initial_Message__c</fullName>
        <description>This message is sent automatically to a customer when a text session is started by an agent.</description>
        <inlineHelpText>This message is sent automatically when a LiveMessage session is accepted by an agent.</inlineHelpText>
        <label>Initial Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__International_Live_Text_Number__c</fullName>
        <description>International LiveMessage Number</description>
        <label>International LiveMessage Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__New_Custom_Objects_Tabs__c</fullName>
        <description>Setting for custom objects feature</description>
        <label>New_Custom_Objects_Tabs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__New_Objects_Tabs__c</fullName>
        <description>Contains objects for which new tabs will be opened</description>
        <label>New_Objects_Tabs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__No_Available_Users_Message__c</fullName>
        <inlineHelpText>This message is sent automatically when a LiveMessage session is received while no agents are available. (Not for use with Omni-Channel)</inlineHelpText>
        <label>No Available Users Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__Notify_Users_During_Off_Hours__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, new LiveMessage sessions received during off hours will populate the LiveMessage or Omni-Channel notification widget.</inlineHelpText>
        <label>Notify Users during off hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Number__c</fullName>
        <description>LiveMessage Number</description>
        <inlineHelpText>The phone number, Facebook page or shortcode that has been verified and enabled for LiveMessage. To register additional numbers or pages please contact LiveMessage support at http://support.hwlivetext.com</inlineHelpText>
        <label>Support Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LiveText__Offline_Hours_Message__c</fullName>
        <description>This message is sent automatically when an inbound customer text is received during offline hours.</description>
        <inlineHelpText>This message is sent automatically when a LiveMessage session is received during offline hours.</inlineHelpText>
        <label>Offline Hours Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__Omni_channel_Queue__c</fullName>
        <description>Id of an Omni-channel queue that conversations will be routed to.</description>
        <label>Omni-channel Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Prepend_Country_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to prepend country code for US and Canadian phone numbers that are auto-populated in new Account, Contact, and Lead records.</inlineHelpText>
        <label>Prepend Country Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Save_Session_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Save the attachments that are sent or received during the message session to the session record.</inlineHelpText>
        <label>Save Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Screen_Pop_Default_Record_Type__c</fullName>
        <description>Default new record type to pop for inbound conversations with no matching records.</description>
        <label>Screen Pop Default Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Search_Exclusively_With_Unique_Id__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, only records previously associated with a Messenger user’s unique ID will be displayed, popped and/or auto-linked. When un-checked records matching a user’s full name will be selected if no records are found using the unique ID.</description>
        <inlineHelpText>When checked, only records previously associated with a Messenger user’s unique ID will be displayed, popped and/or auto-linked. When un-checked records matching a user’s full name will be selected if no records are found using the unique ID.</inlineHelpText>
        <label>Search exclusively with unique ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Show_New_Account_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Account tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Show_New_Case_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Case tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Show_New_Contact_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Contact tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Show_New_Lead_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Lead tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Show_New_Opportunity_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not to show the New Opportunity tab when a text session is started for this phone number.</inlineHelpText>
        <label>Show New Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Start_Message_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This form is sent automatically when a LiveMessage session is accepted by an agent.</description>
        <inlineHelpText>This form is sent automatically when a LiveMessage session is accepted by an agent.</inlineHelpText>
        <label>Start Message Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LiveText__Structured_Form__c.LiveText__Is_Static__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>LiveText__Structured_Form__c.LiveText__Channel__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LiveText__Structured_Form__c</referenceTo>
        <relationshipLabel>LiveText Numbers (Start Message Form)</relationshipLabel>
        <relationshipName>LiveText_Numbers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Text_Session_Reuse_Time_seconds__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The time between when a LiveMessage session is ended and a new message is received that an existing LiveMessage session should be reused.</inlineHelpText>
        <label>LiveMessage Session Reuse Time (seconds)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A number must be verified by HeyWire Business before it is enabled for LiveMessage. To register additional phone numbers please contact LiveMessage support at http://support.hwlivetext.com</inlineHelpText>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <label>LiveMessage Number</label>
    <nameField>
        <label>Phone Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiveMessage Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LiveText__Chat_End_Message_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(LiveText__Chat_End_Message__c)&gt;160</errorConditionFormula>
        <errorDisplayField>LiveText__Chat_End_Message__c</errorDisplayField>
        <errorMessage>Chat End Message should not have more than 160 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LiveText__Initial_Message_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( LiveText__Initial_Message__c) &gt; 160</errorConditionFormula>
        <errorDisplayField>LiveText__Initial_Message__c</errorDisplayField>
        <errorMessage>Initial Message should not have more than 160 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LiveText__Offline_Hours_Message_Length_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( LiveText__Offline_Hours_Message__c) &gt; 160</errorConditionFormula>
        <errorDisplayField>LiveText__Offline_Hours_Message__c</errorDisplayField>
        <errorMessage>Offline hours message should not have more than 160 characters.</errorMessage>
    </validationRules>
</CustomObject>